dashboard and role assignment fix